@@ -1,10 +1,6 @@
 <metadata>
-  <version>0.1</version>
+  <version>1</version>
   <dependencies>
     <dependency>profile-plone.app.dexterity:default</dependency>
-    <dependency>profile-plone.app.deco:default</dependency>
-    <dependency>profile-plone.app.standardtiles:default</dependency>
-    <dependency>profile-plone.app.blocks:default</dependency>
-    <dependency>profile-plone.app.layoutbehavior:default</dependency>
   </dependencies>
 </metadata>
