@@ -1,0 +1,43 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  <head>
+    <link rel="layout" href="./@@default-layout" />
+    <link rel="panel" rev="content" target="content" />
+    <link rel="panel" rev="portal-column-two" target="portal-column-two" />
+    <link rel="tile" target="tile-plone-app-standardtiles-title" href="./@@plone.app.standardtiles.title" />
+    <link rel="tile" target="tile-plone-app-standardtiles-description" href="./@@plone.app.standardtiles.description" />
+  </head>
+  <body>
+    <div id="content">
+      <div class="deco-grid-row">
+        <div class="deco-grid-cell deco-width-full deco-position-leftmost">
+          <div class="deco-tile deco-plone.app.standardtiles.title-tile movable">
+            <div class="deco-tile-content">
+              <span id="tile-plone-app-standardtiles-title"></span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="deco-grid-row">
+        <div class="deco-grid-cell deco-width-full deco-position-leftmost">
+          <div class="movable removable deco-tile deco-plone.app.standardtiles.description-tile">
+            <div class="deco-tile-content">
+              <span id="tile-plone-app-standardtiles-description"></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="portal-column-two">
+      <div class="deco-grid-row">
+        <div class="deco-grid-cell deco-width-full deco-position-leftmost">
+          <div class="deco-tile deco-text-tile movable removable">
+            <div class="deco-tile-content">
+              <h2>Column two</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
