@@ -25,10 +25,6 @@ setup(name='plone.app.page',
       install_requires=[
           'setuptools',
           'plone.app.dexterity',
-          'plone.app.deco',
-          'plone.app.standardtiles',
-          'plone.app.layoutbehavior',
-          'plone.app.blocks',
       ],
       entry_points="""
       [z3c.autoinclude.plugin]
